Fixed flex stretch

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ textarea {
   width: 90%;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
 }
 
 text {
